@@ -1,6 +1,6 @@
 package com.mycom.poc.securedservice.security;
 
-import java.util.Arrays;
+import java.util.List;
 import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -19,9 +19,8 @@ public class CustomAuthenticationProvider implements AuthenticationProvider {
   public Authentication authenticate(Authentication authentication) throws AuthenticationException {
     String userName = authentication.getName();
     String password = String.valueOf(authentication.getCredentials());
-    System.out.println("In custom authentication");
-    if(userName.equals("user") && password.equals("abc123")) {
-      return new UsernamePasswordAuthenticationToken(userName, password, Arrays.asList());
+    if (userName.equals("user") && password.equals("abc123")) {
+      return new UsernamePasswordAuthenticationToken(userName, password, List.of());
     } else {
       throw new AuthenticationCredentialsNotFoundException("Error in Authentication");
     }
